# diff_sim

./: .gitignore  AGENTS.md  PLANS.md  PROJECT_CONTEXT.md  environment.cpu-backup.yml  environment.yml  memo.txt  pyproject.toml
configs/: milestone3_small_model.yaml  sg1_sparse_gradient.yaml
docs/milestones/: milestone_0_minimal_reproduction.md  milestone_1_local_gradient_utility.md  milestone_2_cpu_gpu_infrastructure.md  milestone_2_gpu_scenario_batching.md  milestone_2_iterative_structured_optimization.md  milestone_3_small_model_training.md  milestone_sg1_sparse_gradient.md
scripts/: check_cpu_cuda_parity.py  check_milestone2_gpu_batching.py  run_milestone0.py  run_milestone1.py  run_milestone2_d2.py  run_milestone3.py  run_sg1.py
src/differential_sim/: __init__.py  batched_temporal_gradients.py  controllers.py  device_parity.py  diagnostics.py  idm.py  milestone0_fit.py  milestone1_diagnostics.py  objectives.py  rollout.py  scenarios.py  small_model_training.py  sparse_gradients.py  structured_optimization.py  temporal_gradients.py
temp_content/: feedbacks.md
tests/: test_batched_temporal_gradients.py  test_controller.py  test_device_parity.py  test_diagnostics.py  test_fit.py  test_gradient_modes.py  test_idm.py  test_objectives.py  test_rollout.py  test_small_model_training.py  test_sparse_gradients.py  test_structured_optimization.py
